# Linux-manager

./: .gitignore  ask.md  cam.c  cam.h  cam线程.md
QT客户端代码/SmartHome/Smarthome/: Smarthome.pro  homewidget.cpp  homewidget.h  homewidget.ui  res.qrc
iot_monitor_a9/: CMakeLists.txt  README.md
iot_monitor_a9/cmake/toolchains/: arm-linux-gcc.cmake  arm-linux-gnueabihf-gcc.cmake
iot_monitor_a9/docs/: 文件逐项说明.md
iot_monitor_a9/include/: camera.h  protocol.h  serial_port.h  shared.h  tcp_server.h
iot_monitor_a9/scripts/: build_arm_linux_gcc.sh  build_arm_linux_gnueabihf.sh  build_linux.sh
iot_monitor_a9/src/: camera.c  main.c  protocol.c  serial_port.c  shared.c  tcp_server.c
参考一/: Server.c  Server.h  main.c
参考二/: main.c  seral.c  serial.h
